--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Lucas/Documents/Minecraft/Duo dungeon/plugins/worldedit-bukkit-7.2.0-dist.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
